--- a/Project/LabMonitorWeb/nbproject/project.properties
+++ b/Project/LabMonitorWeb/nbproject/project.properties
@@ -29,7 +29,7 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
 file.reference.LabMonitorEJBModule.jar=lib\\LabMonitorEJBModule.jar
-file.reference.RegistrationEJBModule.jar=lib\\RegistrationEJBModule.jar
+file.reference.RegistrationEJBModule.jar=..\\RegistrationEJBModule\\dist\\RegistrationEJBModule.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
